
Sat Jan 26 14:10:54 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Goodbye, non-free fonts, hello, free font. Turns out the guy who made
    those "public domain" fonts doesn't actually want to release them under a
    free license, so they gotta go.

Wed Jan 16 21:00:18 2002  Tom Gilbert  <tom@linuxbrit.co.uk>

	* Fix broken -j center with multiple lines.

Tue Oct 16 23:01:01 2001  Tom Gilbert  <tom@linuxbrit.co.uk>

	* Life! Added -x and -y for specifying text offsets. Very useful
	when using gozer to annotate an image.

Sat Jan 27 00:42:19 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Renamed to gozer.
	* spec file was broken, had to remove "contrib" installing line as
	there was no way it would work. Left that out for now. Think I
	fixed the manpage install problem too. Dunno.

Fri Nov 10 14:37:16 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* ~/.gomrc is now always read first if available. This sets
	default values if you want. Then commandline options are read,
	then, if --rc-file is specified, that is read and overrides all
	previous options.

Fri Nov 10 04:27:09 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Created and added to CVS.
