@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to create configure.
 
 AC_INIT(src/main.c)
-AM_INIT_AUTOMAKE(gozer, 0.4)
+AM_INIT_AUTOMAKE(gozer, 0.5)
 AM_CONFIG_HEADER(src/config.h)
 
 AC_PROG_CC
