@@ -1,3 +1,6 @@
+Wed May 01 00:03:22 BST 2002  Tom Gilbert <tom@linuxbrit.co.uk>
+
+  * Added -q, --quality option for jpeg output control.
 
 Sat Jan 26 14:10:54 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>
 
